[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Progress bar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI components/Select_pokemon.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Change_scene_button.tscn" type="PackedScene" id=3]

[node name="Pokemon_info_box" type="Control"]
margin_top = 8.0
margin_bottom = 8.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="first" type="VBoxContainer" parent="."]
margin_right = 313.0
margin_bottom = 290.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="first"]
margin_right = 313.0
margin_bottom = 14.0
text = "POKEMON NAME"

[node name="Progress bar" parent="first" instance=ExtResource( 1 )]
margin_top = 18.0
margin_right = 313.0
margin_bottom = 66.0

[node name="HBoxContainer" type="HBoxContainer" parent="first"]
margin_top = 70.0
margin_right = 313.0
margin_bottom = 94.0

[node name="select_pokemon" type="CheckBox" parent="first/HBoxContainer"]
margin_right = 131.0
margin_bottom = 24.0
text = "Select pokemon"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 317.0
margin_right = 630.0
margin_bottom = 290.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="second" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 313.0
margin_bottom = 94.0

[node name="Label" type="Label" parent="VBoxContainer/second"]
margin_right = 313.0
margin_bottom = 14.0
text = "POKEMON NAME"

[node name="Progress bar" parent="VBoxContainer/second" instance=ExtResource( 1 )]
margin_top = 18.0
margin_right = 313.0
margin_bottom = 66.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/second"]
margin_top = 70.0
margin_right = 313.0
margin_bottom = 94.0

[node name="select_pokemon2" type="CheckBox" parent="VBoxContainer/second/HBoxContainer"]
margin_right = 131.0
margin_bottom = 24.0
text = "Select pokemon"

[node name="third" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 313.0
margin_bottom = 192.0

[node name="Label" type="Label" parent="VBoxContainer/third"]
margin_right = 313.0
margin_bottom = 14.0
text = "POKEMON NAME"

[node name="Progress bar" parent="VBoxContainer/third" instance=ExtResource( 1 )]
margin_top = 18.0
margin_right = 313.0
margin_bottom = 66.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/third"]
margin_top = 70.0
margin_right = 313.0
margin_bottom = 94.0

[node name="select_pokemon3" type="CheckBox" parent="VBoxContainer/third/HBoxContainer"]
margin_right = 131.0
margin_bottom = 24.0
text = "Select pokemon"

[node name="fourth" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 196.0
margin_right = 313.0
margin_bottom = 290.0

[node name="Label" type="Label" parent="VBoxContainer/fourth"]
margin_right = 313.0
margin_bottom = 14.0
text = "POKEMON NAME"

[node name="Progress bar" parent="VBoxContainer/fourth" instance=ExtResource( 1 )]
margin_top = 18.0
margin_right = 313.0
margin_bottom = 66.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/fourth"]
margin_top = 70.0
margin_right = 313.0
margin_bottom = 94.0

[node name="select_pokemon4" type="CheckBox" parent="VBoxContainer/fourth/HBoxContainer"]
margin_right = 131.0
margin_bottom = 24.0
text = "Select pokemon"

[node name="Change_scene_button" parent="." instance=ExtResource( 3 )]
margin_left = 96.0
margin_top = 208.0
margin_right = 137.0
margin_bottom = 231.0
text = "BACK"
next_scene_path = "res://Scenes/UI components/Bag.tscn"
[connection signal="pressed" from="first/HBoxContainer/select_pokemon" to="." method="_on_select_pokemon_pressed"]
[connection signal="pressed" from="VBoxContainer/second/HBoxContainer/select_pokemon2" to="." method="_on_select_pokemon2_pressed"]
[connection signal="pressed" from="VBoxContainer/third/HBoxContainer/select_pokemon3" to="." method="_on_select_pokemon3_pressed"]
[connection signal="pressed" from="VBoxContainer/fourth/HBoxContainer/select_pokemon4" to="." method="_on_select_pokemon4_pressed"]
